Fix content overlapping footer
TODO: Fix container not expanding enough when there's not enough content to fill the page

--- a/app/assets/stylesheets/_nav.css.scss
+++ b/app/assets/stylesheets/_nav.css.scss
@@ -5,7 +5,6 @@ nav.mobile {
 nav.desktop {
   @include span-columns(3, block-collapse);
   height: 100%;
-  border-right: 1px solid $layout-border-color;
   margin: 0;
   padding: 25px 0 0 0;
   width: $nav-width;
